# Dpol_smsimulator

./: .clangd  .envrc  .gitignore  .ignore  .rgignore  AGENTS.md  AxisDefinition.eps  CLAUDE.md  CMakeLists.txt  CMakeLists_NEW.txt  GENERATED_FILES_SUMMARY.md  HOW_TO_BUILD_AND_RUN.md  MIGRATION_GUIDE.md  MIGRATION_TO_GIT.md  QUICK_REFERENCE.txt  README  README.md  README_MIGRATION.txt  README_NEW_STRUCTURE.md  RUNNING_GUIDE.md  RUN_TEST_GUIDE.md  SUMMARY_迁移文件汇总.txt  auto_migrate_and_setup.sh  build.sh  change_structure.md  clean.sh  cmakeREADME.md  copy_all_cmake.sh  copy_all_cmake_fixed.sh  detector_geometry.gdml  generate_guides.sh  log.txt  migrate_to_git.sh  migrate_to_new_structure.sh  quick_build.sh  replace_paths_with_env.sh  rootBenchmark.txt  rootlogon.C  run_sim.sh  safe_build.sh  (+7 more)
apps/run_reconstruction/: CMakeLists.txt  main.cc
apps/sim_deuteron/: CMakeLists.txt  LOGGER_INIT_EXAMPLE.cc  main.cc
apps/tools/: CMakeLists.txt  analyze_pdc_rk_error.cc  analyze_pdc_scan_root.cc  dump_nebula_reco_golden.cc  evaluate_reconstruct_sn_nn.cc  evaluate_target_momentum_reco.cc  prepare_ips_wrl_examples.cc  reconstruct_sn_nn.cc  scan_ips_position.cc
d_work/sources/: CMakeLists.txt  Makefile  dependency.html
d_work/sources/include/: EventDataReader.hh  EventDisplay.hh  EventProcessor.hh  GeometryManager.hh  MagneticField.hh  NEBULAReconstructor.hh  PDCSimAna.hh  ParticleTrajectory.hh  RecoEvent.hh  TargetReconstructor.hh
d_work/sources/src/: EventDataReader.cc  EventDataReader.cc.backup  EventDisplay.cc  EventProcessor.cc  GeometryManager.cc  LinkDef.h  MagneticField.cc  PDCSimAna.cc  ParticleTrajectory.cc  TargetReconstructor.cc  TargetReconstructor.cc.backup2
libs/analysis/: CMakeLists.txt
libs/analysis/include/: AnalysisLinkDef.h  EventDataReader.hh  EventDisplay.hh  MagneticField.hh  NEBULABaseReco.hh  NEBULAFrameRotation.hh  NEBULAPlusReco.hh  NEBULAReco.hh  NEBULAReconstructor.hh  NebulaJointReco.hh  NeutronDetectorConfig.hh  RecoEvent.hh  TargetReconstructor.hh
libs/analysis/src/: EventDataReader.cc  EventDisplay.cc  EventProcessor.cc  GeometryManager.cc  LinkDef.h  MagneticField.cc  NEBULABaseReco.cc  NEBULAPlusReco.cc  NEBULAReco.cc  NEBULAReconstructor.cc  NebulaJointReco.cc  NeutronDetectorConfig.cc  PDCSimAna.cc  ParticleTrajectory.cc  TargetReconstructor.cc
libs/analysis_pdc_reco/: CMakeLists.txt
libs/analysis_pdc_reco/include/: PDCErrorAnalysis.hh  PDCFrameRotation.hh  PDCMomentumReconstructor.hh  PDCNNMomentumReconstructor.hh  PDCRecoFactory.hh  PDCRecoRuntime.hh  PDCRecoTypes.hh
libs/analysis_pdc_reco/src/: PDCErrorAnalysis.cc  PDCMomentumReconstructor.cc  PDCMomentumReconstructorMatrix.cc  PDCMomentumReconstructorMultiDim.cc  PDCMomentumReconstructorNN.cc  PDCMomentumReconstructorRK.cc  PDCNNMomentumReconstructor.cc  PDCRecoFactory.cc  PDCRecoRuntime.cc  PDCRkAnalysisInternal.cc  PDCRkAnalysisInternal.hh
libs/geo_accepentce/: CMakeLists.txt  DETECTOR_SIZES_UPDATE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  USAGE.txt  readme.md
libs/geo_accepentce/include/: BeamDeflectionCalculator.hh  DetectorAcceptanceCalculator.hh  GeoAcceptanceManager.hh
libs/geo_accepentce/src/: BeamDeflectionCalculator.cc  DetectorAcceptanceCalculator.cc  GenerateTargetConfigs.cc  GeoAcceptanceManager.cc  RunGeoAcceptanceAnalysis.cc  test_geo_acceptance.cc
libs/qmd_geo_filter/: CMakeLists.txt  __init__.py  analysis_runner.py  cpp_interface.py  geometry_filter.py  momentum_cut.py  plot_utils.py  qmd_data_loader.py
libs/qmd_geo_filter/include/: QMDGeoFilter.hh
libs/qmd_geo_filter/src/: QMDGeoFilter.cc  RunQMDGeoFilter.cc
libs/sim_deuteron_core/: CMakeLists.txt  LOGGER_USAGE_EXAMPLE.cc
libs/sim_deuteron_core/include/: DeutDetectorConstruction.hh  DeutDetectorConstructionMessenger.hh  DeutPrimaryGeneratorAction.hh  DeutSteppingAction.hh
libs/sim_deuteron_core/src/: DeutDetectorConstruction.cc  DeutDetectorConstructionMessenger.cc  DeutPrimaryGeneratorAction.cc  DeutSteppingAction.cc
libs/smg4lib/: CMakeLists.txt
libs/smg4lib/include/: AddXSPhysics.hh  DipoleConstruction.hh  EventActionBasic.hh  FragSimDataConverter_Basic.hh  FragSimDataInitializer.hh  NEBULAConstruction.hh  NEBULAPlusConstruction.hh  NEBULAPlusSD.hh  NEBULAPlusSimDataConverter_TArtNEBULAPlusPla.hh  NEBULAPlusSimParameterReader.hh  NEBULASimDataConverter_TArtNEBULAPla.hh  NEBULASimParameterReader.hh  NeutronDetectorSimConfig.hh  PDCConstruction.hh  PhysicsListBasicMessenger.hh  PrimaryGeneratorActionBasic.hh  QGSP_BIC_XSHP.hh  menate_R.hh  (+11 more)
libs/smlogger/: CMakeLists.txt  README.md
smg4lib/data/: Makefile  Makefile.in  autogen.sh  config.h  config.status  configure  configure.in  libtool
sources/sim_deuteron/: CMakeLists.txt
tests/: CMakeLists.txt  baseline_status_before_nebula_plus.txt
tests/analysis/: CMakeLists.txt  README.md  run_3d_display.sh  run_event_display_realdata.C  run_event_display_realdata_C.d  run_event_display_realdata_C_ACLiC_dict_rdict.pcm  run_realdata_viz_test.sh  test_NEBULAReco_legacy_compat.cc  test_PDCErrorAnalysis.cc  test_PDCMomentumReconstructor.cc  test_ParticleTrajectory.cc  test_TargetReconstructor.cc  test_TargetReconstructor_RealData.cc  test_detector_folding_diagnostics.py  test_gamma_constraint_report_assets.py  test_imqmd_reaction_category.py  test_nebulaplus_r_observable.py  test_rk_vs_nn_breakup_ranges.py  test_truth_reco_selection_closure.py
tests/fixtures/: nebula_reco_golden.root  nebula_reco_input.root
tests/integration/: CMakeLists.txt  test_geninput_qmdrawdata_roundtrip.C  test_geninput_qmdrawdata_roundtrip.sh  test_pdc_error_analysis_e2e.sh  test_pdc_position.cc  test_pdc_target_momentum_e2e.cc  test_rk_nn_comparison.py  test_rotation_consistency.cc  test_sim_deuteron_with_nebula_plus.sh
tests/unit/: CMakeLists.txt  test_DeutDetectorConstruction_defaults.cc  test_NEBULAPlusReco_basic.cc  test_NEBULAPlusSimParameterReader.cc  test_NebulaJointReco_combined.cc  test_NeutronDetectorConfig.cc  test_NeutronDetectorSimConfig.cc  test_no_bare_target_macros.sh  test_qmd_input_metadata_indices.cc  test_qmd_rotation.cc  test_rootlogon_portable.sh
(+3414 files in other folders)
