#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(data, 0.0.0, [titech@nakamura_lab])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX([g++-13])
AC_PROG_RANLIB
AC_PROG_LIBTOOL
ROOTLIBS="`$ROOTSYS/bin/root-config --glibs`"
AC_SUBST(ROOTLIBS)

AC_CONFIG_FILES([Makefile
                 sources/Makefile])
AC_OUTPUT
